--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -88,7 +88,8 @@
 
 .slider__item {
   min-height: 400px;   
-  background-repeat: no-repeat; 
+  background-image: url('../images/slider-bg.jpg');
+  background-repeat: no-repeat;  
   background-size: cover;
   background-position: center;  
   margin-bottom: 20px;   
